[tool.poetry]
name = "coronavirus-bot"
version = "0.1.0"
description = ""
authors = ["Lichader <1524470+lichader@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
